# build-your-django-app

./: LICENSE  README.md  build.bat  build_your_app.py  clean_build.bat  pyproject.toml
article/: apps.py
article/templates/blog/: about.html  contact.html
